# example_dvc

./: .dvc-check.sh  .dvc-push.sh  .gitignore  .pre-commit-config.yaml  my_example_data.dvc  pyproject.toml  readme.md
.dvc/: config
